# utils_project-generator

./: .gitignore  CHANGES.md  Cargo.toml  README.md  config.example.yaml
.github/workflows/: generate-project.yml
src/: args.rs  config.rs  github.rs  lib.rs  main.rs
src/cli/: functions.rs  mod.rs
src/config/: file_config.rs  mod.rs
src/generate/: file_operations.rs  functions.rs  mod.rs  project_generator.rs
src/github/: mod.rs  repo.rs
src/template/: mod.rs
src/utils/: context.rs  error.rs  mod.rs  strings.rs  validation.rs
