[package]
name = "project-generator-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1.11"
indexmap = "2.7"
git2 = "0.18"
tempfile = "3.10"